--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>iAnsarker</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="overlay"></div>
     <div id="root"></div>
   </body>
 </html>
